unpackaged/main/default/objects/SBQQ__CustomScript__c/fields/SBQQ__ConsumptionRateFields__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ConsumptionRateFields__c</fullName>
    <description>Fields on the ConsumptionRate object referenced by this plugin</description>
    <inlineHelpText>Noms d&#39;API des champs de taux de consommation référencés par ce plug-in. Saisissez jusqu&#39;à 10 champs, un pour chaque ligne.</inlineHelpText>
    <label>Consumption Rate Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>