unpackaged/main/default/objects/SBQQ__CustomScript__c/fields/SBQQ__ConsumptionScheduleFields__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ConsumptionScheduleFields__c</fullName>
    <description>Fields on the ConsumptionSchedule object referenced by this plugin</description>
    <inlineHelpText>Noms d&#39;API des champs de planification de consommation référencés par ce plug-in. Saisissez jusqu&#39;à 10 champs, un pour chaque ligne.</inlineHelpText>
    <label>Consumption Schedule Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>