unpackaged/main/default/objects/SBQQ__CustomScript__c/fields/SBQQ__GroupFields__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__GroupFields__c</fullName>
    <description>Fields on the QuoteLineGroup__c object referenced by this plugin</description>
    <inlineHelpText>Saisissez les noms d&#39;API de tous les champs Groupe de ligne de devis référencés par ce plug-in, un par ligne.</inlineHelpText>
    <label>Quote Line Group Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>