unpackaged/main/default/objects/SBQQ__CustomScript__c/fields/SBQQ__QuoteLineFields__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__QuoteLineFields__c</fullName>
    <description>QuoteLine__c fields referenced by the plugin</description>
    <inlineHelpText>Saisissez les noms d&#39;API de tous les champs Ligne de devis référencés par ce plug-in, un par ligne.</inlineHelpText>
    <label>Quote Line Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>